force-app/main/default/objects/B2B_WL_Leads__c/B2B_WL_Leads__c.object-meta.xml
<CustomObject>
    <label>B2B WL Lead</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>