force-app/main/default/objects/B2B_WL_Leads__c/fields/Additional_comments_or_questions__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments_or_questions__c</fullName>
    <label>Additional comments or questions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>