force-app/main/default/objects/B2B_WL_Leads__c/fields/Are_you_an_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Are_you_an_Existing_Customer__c</fullName>
    <label>Are you an Existing Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>