force-app/main/default/objects/B2B_WL_Leads__c/fields/Company_business_name__c.field-meta.xml
<CustomField>
    <fullName>Company_business_name__c</fullName>
    <label>Company/business name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>