force-app/main/default/objects/B2B_WL_Leads__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>B2B Leads</relationshipLabel>
    <relationshipName>B2B_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>