force-app/main/default/objects/B2B_WL_Leads__c/fields/Cryptocurrency_pair_s_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Cryptocurrency_pair_s_of_interest__c</fullName>
    <label>Cryptocurrency pair(s) of interest:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOL /CAD</fullName>
            </value>
            <value>
                <fullName>XRP/CAD</fullName>
            </value>
            <value>
                <fullName>BTC/CAD</fullName>
            </value>
            <value>
                <fullName>USDC/CAD</fullName>
            </value>
            <value>
                <fullName>ETH/CAD</fullName>
            </value>
            <value>
                <fullName>SUI/CAD</fullName>
            </value>
            <value>
                <fullName>ADA/CAD</fullName>
            </value>
            <value>
                <fullName>LINK/CAD</fullName>
            </value>
            <value>
                <fullName>DOGE/CAD</fullName>
            </value>
            <value>
                <fullName>XLM/CAD</fullName>
            </value>
            <value>
                <fullName>ONDO/CAD</fullName>
            </value>
            <value>
                <fullName>AVAX/CAD</fullName>
            </value>
            <value>
                <fullName>JASMY/CAD</fullName>
            </value>
            <value>
                <fullName>HBAR/CAD</fullName>
            </value>
            <value>
                <fullName>NEAR/CAD</fullName>
            </value>
            <value>
                <fullName>PEPE/CAD</fullName>
            </value>
            <value>
                <fullName>BERA/CAD</fullName>
            </value>
            <value>
                <fullName>DOT/CAD</fullName>
            </value>
            <value>
                <fullName>POL/CAD</fullName>
            </value>
            <value>
                <fullName>RENDER/CAD</fullName>
            </value>
            <value>
                <fullName>SHIB/CAD</fullName>
            </value>
            <value>
                <fullName>FET/CAD</fullName>
            </value>
            <value>
                <fullName>GRT/CAD</fullName>
            </value>
            <value>
                <fullName>LTC/CAD</fullName>
            </value>
            <value>
                <fullName>TIA/CAD</fullName>
            </value>
            <value>
                <fullName>GALA/CAD</fullName>
            </value>
            <value>
                <fullName>S/CAD</fullName>
            </value>
            <value>
                <fullName>ALGO/CAD</fullName>
            </value>
            <value>
                <fullName>VET/CAD</fullName>
            </value>
            <value>
                <fullName>QNT/CAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>