force-app/main/default/objects/B2B_WL_Leads__c/fields/Expected_Transaction_Volume_CAD__c.field-meta.xml
<CustomField>
    <fullName>Expected_Transaction_Volume_CAD__c</fullName>
    <label>Expected Transaction Volume ($CAD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>