force-app/main/default/objects/B2B_WL_Leads__c/fields/Preferred_contact_method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_contact_method__c</fullName>
    <label>Preferred contact method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>