force-app/main/default/objects/B2B_WL_Leads__c/fields/trade_execution_needs__c.field-meta.xml
<CustomField>
    <fullName>trade_execution_needs__c</fullName>
    <description>Which of the following best describes your trade execution needs:</description>
    <label>Trade execution needs</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Preferred_contact_method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Trades</fullName>
            </value>
            <value>
                <fullName>Business Trades</fullName>
            </value>
            <value>
                <fullName>Third Party Trades</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>