force-app/main/default/objects/B2B_WL_Leads__c/fields/When_are_you_looking_to_start_trading__c.field-meta.xml
<CustomField>
    <fullName>When_are_you_looking_to_start_trading__c</fullName>
    <label>When are you looking to start trading?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>trade_execution_needs__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right away</fullName>
                <default>true</default>
                <label>Right away</label>
            </value>
            <value>
                <fullName>In the next month</fullName>
            </value>
            <value>
                <fullName>In the next 3 months</fullName>
            </value>
            <value>
                <fullName>In the next 6 months</fullName>
            </value>
            <value>
                <fullName>In the next year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>